# image-stitching

./: CMakeLists.txt  LICENSE.txt  README.md
data/grail/: focal-length.txt
data/parrington/: focal-length.txt
source/: commandArgument.cpp  commandArgument.h  config.h  imageStitching.cpp  main.cpp  mathUtils.h  shared.h
source/bundleAdjuster/: perspectiveBundleAdjuster.cpp  perspectiveBundleAdjuster.h
source/core/: bundleAdjuster.h  featureDescriptor.h  featureDetector.h  featureMatcher.h  imageBlender.h  imageMatcher.h  imageStitcher.cpp  imageStitcher.h  imageWarpper.h
source/featureDescriptor/: siftDescriptor.cpp  siftDescriptor.h  siftFeatureDescriptor.cpp  siftFeatureDescriptor.h
source/featureDetector/: harrisCornerDetector.cpp  harrisCornerDetector.h  harrisFeatureDetector.cpp  harrisFeatureDetector.h
source/featureMatcher/: bruteForceFeatureMatcher.cpp  bruteForceFeatureMatcher.h
source/imageBlender/: linearAlphaImageBlender.cpp  linearAlphaImageBlender.h
source/imageMatcher/: ransacImageMatcher.cpp  ransacImageMatcher.h
source/imageWarpper/: cylindricalImageWarpper.cpp  cylindricalImageWarpper.h
